--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@keystonejs/auth-password": "^6.0.2",
     "@keystonejs/fields": "^22.0.1",
     "@keystonejs/keystone": "^19.2.1",
-    "@zach.codes/react-calendar": "^0.0.3",
     "antd": "^4.15.0",
     "cross-env": "^7.0.3",
-    "date-fns": "^2.20.1",
     "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
+    "react-big-calendar": "^0.33.2",
     "react-use": "^17.2.3",
     "styled-components": "^5.2.3"
   },
