--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "randomcolor": "^0.6.2",
     "react-big-calendar": "^0.33.2",
     "react-use": "^17.2.3",
     "styled-components": "^5.2.3"
