--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react-big-calendar": "^0.33.2",
+    "react-query": "^3.13.7",
     "react-use": "^17.2.3",
     "styled-components": "^5.2.3"
   },
