--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "The KeystoneJS Development Team",
   "repository": "https://github.com/keystonejs/keystone-5/tree/master/packages/create-keystone-app/example-projects/starter",
   "homepage": "https://github.com/keystonejs/keystone-5",
+  "cacheDirectories": [
+    ".next/cache"
+  ],
   "license": "MIT",
   "engines": {
     "node": ">=10.0.0"
