--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,51 +1,53 @@
 {
   "name": "Planf'Online",
   "short_name": "Planf'Online",
+  "theme_color": "#ffffff",
+  "background_color": "#004740",
+  "display": "fullscreen",
+  "orientation": "portrait",
+  "scope": "/",
   "start_url": "/",
-  "display": "standalone",
-  "background_color": "#90cdf4",
-  "theme_color": "#90cdf4",
-  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/logo-72x72.png",
-      "type": "image/png",
-      "sizes": "72x72"
+      "src": "icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
     },
     {
-      "src": "/logo-96x96.png",
-      "type": "image/png",
-      "sizes": "96x96"
+      "src": "icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
     },
     {
-      "src": "/logo-128x128.png",
-      "type": "image/png",
-      "sizes": "128x128"
+      "src": "icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
     },
     {
-      "src": "/logo-144x144.png",
-      "type": "image/png",
-      "sizes": "144x144"
+      "src": "icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
     },
     {
-      "src": "/logo-152x152.png",
-      "type": "image/png",
-      "sizes": "152x152"
+      "src": "icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
     },
     {
-      "src": "/logo-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "/logo-384x384.png",
-      "type": "image/png",
-      "sizes": "384x384"
+      "src": "icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
     },
     {
-      "src": "/logo-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ]
+  ],
+  "splash_pages": null
 }
