--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^8.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "next-pwa": "^5.2.9",
     "react-big-calendar": "^0.33.2",
     "react-query": "^3.13.7",
     "react-use": "^17.2.3",
