--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": ">=17"
+    "node": "16.13.0"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
-    "build": "cross-env NODE_ENV=production keystone build",
+    "build": "cross-env NODE_ENV=production keystone build --openssl-legacy-provider",
     "start": "cross-env NODE_ENV=production keystone start",
     "create-tables": "cross-env CREATE_TABLES=true keystone create-tables",
     "deploy": "git push heroku main:main"
